docs: 📝 Update easy version instructions

--- a/book/src/04_3_2_i2c.md
+++ b/book/src/04_3_2_i2c.md
@@ -2,7 +2,7 @@
 
 We're not going to write an entire driver, merely the first step: the `hello world` of driver writing: reading the device ID of the sensor. This version is labelled easy, because we explain the code fragments, and you only have to copy and paste the fragments into the right place. Use this version if you have very little previous experience with Rust, if these workshops are your first in the embedded domain, or if you found the hard version too hard. You can work in the same file with either version.
 
-`i2c-driver/src/icm42670p.rs` is a gap text of a very basic I²C IMU sensor driver. The task is to complete the file, so that running `main.rs` will log the device ID of the driver. This gap text driver is based on the version of the same name that lives in common, but provides a little bit more functionality.
+`i2c-driver/src/icm42670p.rs` is a gap text of a very basic I²C IMU sensor driver. The task is to complete the file, so that running `main.rs` will log the device ID of the driver.
 
 `i2c-driver/src/icm42670p_solution.rs` provides the solution to this exercise. If you want to run it, the imports need to be changed in `main.rs` and `lib.rs`. The imports are already there, you only need to comment the current imports out and uncomment the solutions as marked in the line comments.
 
@@ -40,16 +40,17 @@ where
 ```
 ### Device address
 
-- the device's addresses are available in the code:
+- The device's addresses are available in the code:
 
 ```rust
 AD0 = 0b110_1000, // or 0x68
 AD1 = 0b110_1001, // or 0x69
 ```
 
-- This I²C device has two possible addresses - 0x68 and 0x69.
-We tell the device which one we want it to use by applying either 0V or 3.3V to the AP_AD0 pin on the device. If we apply 0V, it listens to address 0x68. If we apply 3.3V it listens to address 0x69. You can therefore think of pin AD_AD0 as being a one-bit input which sets the least-significant bit of the device address.
-More information is available in the [data sheet, section 9.3](https://3cfeqx1hf82y3xcoull08ihx-wpengine.netdna-ssl.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf)
+- This I²C device has two possible addresses - `0x68` and `0x69`.
+We tell the device which one we want it to use by applying either `0V` or `3.3V` to the `AP_AD0` pin on the device. If we apply 0V, it listens to address 0x68. If we apply `3.3V` it listens to address `0x69`. You can therefore think of pin `AD_AD0` as being a one-bit input which sets the least-significant bit of the device address.
+More information is available in the [datasheet, section 9.3](https://invensense.tdk.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf)
+
 ### Representation of Registers
 
 The sensor's registers are represented as enums. Each variant has the register's address as value. The type `Register` implements a method that exposes the variant's address.
@@ -68,9 +69,9 @@ impl Register {
 
 ```
 
-### read_register() and write_register()
+### `read_register()` and `write_register()`
 
-We define a read and a write method, based on methods provided by the `embedded-hal` crate. They serve as helpers for more specific methods and as an abstraction that is adapted to a sensor with 8-bit registers. Note how the `read_register()` method is based on a `write_read()` method. The reason for this lies in the characteristics of the I²C protocol: We first need to write a command over the I²C bus to specify which register we want to read from. Helper methods can remain private as they don't need to be accessible from outside this crate.
+We define a _read_ and a _write_ method, based on methods provided by the `embedded-hal` crate. They serve as helpers for more specific methods and as an abstraction that is adapted to a sensor with 8-bit registers. Note how the `read_register()` method is based on a `write_read()` method. The reason for this lies in the characteristics of the I²C protocol: We first need to write a command over the I²C bus to specify which register we want to read from. Helper methods can remain private as they don't need to be accessible from outside this crate.
 
 ```rust
 impl<I2C, E>ICM42670P<I2C>
@@ -96,11 +97,12 @@ where
 ✅ Implement a public method that reads the `WHOAMI` register with the address `0x0F`. Make use of the the above `read_register()` method.
 
 
-✅ Optional: Implement further methods that add features to the driver. Check the [documentation](https://3cfeqx1hf82y3xcoull08ihx-wpengine.netdna-ssl.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf) for the respective registers and their addresses. Some ideas:
+✅ Optional: Implement further methods that add features to the driver. Check the [documentation](https://invensense.tdk.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf) for the respective registers and their addresses.
 
-    * switching the the gyroscope sensor or the accelerometer on
-    * starting measurements
-    * reading measurements
+💡 Some ideas:
+* Switching the the gyroscope sensor or the accelerometer on
+* Starting measurements
+* Reading measurements
 
 ### 🔎 General info about peripheral registers
 
@@ -108,5 +110,5 @@ Registers can have different meanings; in essence they are **a location that can
 
 In this specific context we are using an external device (since it is a sensor, even if it is on the same PCB). It is addressable by I2C and we are reading and writing to its register addresses. The addresses each identify a unique location that contains some information. In this case, we want the address for the location that contains the current temperature, as read by the sensor.
 
-You can find the register map of the ICM-42670 in [section 14](https://3cfeqx1hf82y3xcoull08ihx-wpengine.netdna-ssl.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf) should you want to try to get other interesting data from this sensor.
+You can find the register map of the ICM-42670 in [section 14](https://invensense.tdk.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf) should you want to try to get other interesting data from this sensor.
 
