--- a/book/src/04_3_2_i2c.md
+++ b/book/src/04_3_2_i2c.md
@@ -25,7 +25,7 @@ pub struct ICM42670P<I2C> {
 // ...
 ```
 
-We add an `impl` block that will contain all the methods that can be used on the sensor instance. It also defines the Error Handling. In this block we also implement an instantiating method. Methods can also be public or private. This method needs to be accessible from outside, so it's labelled `pub`. Note that written this way, the sensor instance takes ownership of the I²C bus.
+We add an `impl` block that will contain all the methods that can be used on the sensor instance. It also defines the Error Handling. In this block, we also implement an instantiating method. Methods can also be public or private. This method needs to be accessible from outside, so it's labelled `pub`. Note that written this way, the sensor instance takes ownership of the I²C bus.
 
 ```rust
 impl<I2C, E>ICM42670P<I2C>
@@ -94,19 +94,19 @@ where
 }
 ```
 
-✅ Implement a public method that reads the `WHOAMI` register with the address `0x0F`. Make use of the the above `read_register()` method.
+✅ Implement a public method that reads the `WhoAmI` register with the address `0x0F`. Make use of the above `read_register()` method.
 
 
 ✅ Optional: Implement further methods that add features to the driver. Check the [documentation](https://invensense.tdk.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf) for the respective registers and their addresses. 💡 Some ideas:
-* Switching the the gyroscope sensor or the accelerometer on
+* Switching the gyroscope sensor or the accelerometer on
 * Starting measurements
 * Reading measurements
 
 ### 🔎 General info about peripheral registers
 
-Registers can have different meanings; in essence they are **a location that can store a value**.
+Registers can have different meanings; in essence, they are **a location that can store a value**.
 
-In this specific context we are using an external device (since it is a sensor, even if it is on the same PCB). It is addressable by I2C and we are reading and writing to its register addresses. The addresses each identify a unique location that contains some information. In this case, we want the address for the location that contains the current temperature, as read by the sensor.
+In this specific context, we are using an external device (since it is a sensor, even if it is on the same PCB). It is addressable by I2C, and we are reading and writing to its register addresses. The addresses each identify a unique location that contains some information. In this case, we want the address for the location that contains the current temperature, as read by the sensor.
 
 You can find the register map of the ICM-42670 in [section 14](https://invensense.tdk.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf) should you want to try to get other interesting data from this sensor.
 
