--- a/book/src/04_3_3_i2c.md
+++ b/book/src/04_3_3_i2c.md
@@ -26,13 +26,13 @@ We're not going to write an entire driver, merely the first step: the `hello wor
 
 ### Representation of Registers
 
-✅ Create an enum that represents the sensor's registers. Each variant has the register's address as value. For now you only need the WhoAmI register. Find its address in the data sheet.
+✅ Create an enum that represents the sensor's registers. Each variant has the register's address as value. For now, you only need the `WhoAmI` register. Find its address in the datasheet.
 
 ✅ Implement a method that exposes the variant's address as `u8`.
 
 ### `read_register()` and `write_register()`
 
-✅ Check out the write and write_read function in the embedded-hal. Why is it `write_read` and not just `read`?
+✅ Check out the write and `write_read` function in the `embedded-hal`. Why is it `write_read` and not just `read`?
 
 <Details>
     <Summary>Answer</Summary>
@@ -41,13 +41,12 @@ The reason for this lies in the characteristics of the I²C protocol: We first n
 
 ✅ Define a `read_register` and a `write_register` method for the sensor instance. Use methods provided by the `embedded-hal` crate. They serve as helpers for more specific methods and as an abstraction that is adapted to a sensor with 8-bit registers. This means that the data that is written, as well as the data that is read is an unsigned 8-bit integer. Helper methods can remain private as they don't need to be accessible from outside this crate.
 
-✅ Implement a public method that reads the `WHOAMI` register with the address `0x0F`. Make use of the the above `read_register()` method.
-
+✅ Implement a public method that reads the `WhoAmI` register with the address `0x75`. Make use of the above `read_register()` method.
 
 ✅ Optional: Implement further methods that add features to the driver. Check the [documentation](https://invensense.tdk.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf) for the respective registers and their addresses. 💡 Some ideas:
- * switching the the gyroscope sensor or the accelerometer on
- * starting measurements
- * reading measurements
+ * Switching the gyroscope sensor or the accelerometer on
+ * Starting measurements
+ * Reading measurements
 
 ### 🔎 General info about peripheral registers
 
