docs: 🎨 Format comments

--- a/book/src/03_5_3_mqtt.md
+++ b/book/src/03_5_3_mqtt.md
@@ -60,15 +60,15 @@ In the processing function, you will handle `Complete` messages.
 
 ```rust
 match message.details() {
-    // all messages in this exercise will be of type `Complete`
-    // the other variants of the `Details` enum are for larger message payloads
+    // All messages in this exercise will be of type `Complete`
+    // The other variants of the `Details` enum are for larger message payloads
     Complete => {
 
         // Cow<&[u8]> can be coerced into a slice &[u8] or a Vec<u8>
         // You can coerce it into a slice to be sent to try_from()
         let message_data: &[u8] = &message.data();
         if let Ok(ColorData::BoardLed(color)) = ColorData::try_from(message_data) {
-            // set the LED to the newly received color
+            // Set the LED to the newly received color
 
         }
     }
@@ -113,20 +113,20 @@ let command = Command::BoardLed(color)
 ```rust
 match message.details() {
     Complete => {
-        // all messages in this exercise will be of type `Complete`
+        // All messages in this exercise will be of type `Complete`
         // the other variants of the `Details` enum
         // are for larger message payloads
 
         // Cow<str> behaves a lot like other Rust strings (&str, String)
         let topic: Cow<str> = message.topic(token);
 
-        // determine if we're interested in this topic and
-        // dispatch based on its content
+        // Determine if we're interested in this topic and
+        // Dispatch based on its content
         let is_command_topic: bool = /* ... */;
         if is_command_topic {
             let raw = RawCommandData { /* ... */ };
             if let Ok(Command::BoardLed(color)) = Command::try_from(raw) {
-                // set the LED to the newly received color
+                // Set the LED to the newly received color
             }
 
         },
