--- a/book/src/03_5_1_mqtt.md
+++ b/book/src/03_5_1_mqtt.md
@@ -5,7 +5,7 @@
 <!-- Test with HiveMQ or any other free server? -->
 
 To conclude the introductory course, let's add some [IoT](https://en.wikipedia.org/wiki/Internet_of_things) functionality to the board.
-Our goal here is having our boar to send out real-time updates of sensor values without having to poll repeatedly, like we would with an HTTP server, and also receive commands to change the board LED color.
+Our goal here is having our board to send out real-time updates of sensor values without having to poll repeatedly, like we would with an HTTP server, and also receive commands to change the board LED color.
 
 This can be modeled using a [publish-subscribe architecture](https://en.wikipedia.org/wiki/Publish%E2%80%93subscribe_pattern), where multiple clients publish messages in certain channels/topics, and can also subscribe to these topics to receive messages sent by others. Dispatching of these messages is coordinated by a message broker - in our case, this is done in an MQTT server.
 
