--- a/book/src/04_3_2_i2c.md
+++ b/book/src/04_3_2_i2c.md
@@ -48,7 +48,7 @@ AD1 = 0b110_1001, // or 0x69
 ```
 
 - This I²C device has two possible addresses - `0x68` and `0x69`.
-We tell the device which one we want it to use by applying either `0V` or `3.3V` to the `AP_AD0` pin on the device. If we apply 0V, it listens to address 0x68. If we apply `3.3V` it listens to address `0x69`. You can therefore think of pin `AD_AD0` as being a one-bit input which sets the least-significant bit of the device address.
+We tell the device which one we want it to use by applying either `0V` or `3.3V` to the `AP_AD0` pin on the device. If we apply `0V`, it listens to address `0x68`. If we apply `3.3V` it listens to address `0x69`. You can therefore think of pin `AD_AD0` as being a one-bit input which sets the least-significant bit of the device address.
 More information is available in the [datasheet, section 9.3](https://invensense.tdk.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf)
 
 ### Representation of Registers
