--- a/book/src/04_3_2_i2c.md
+++ b/book/src/04_3_2_i2c.md
@@ -94,7 +94,7 @@ where
 }
 ```
 
-✅ Implement a public method that reads the `WhoAmI` register with the address `0x0F`. Make use of the above `read_register()` method.
+✅ Implement a public method that reads the `WhoAmI` register with the address `0x75`. Make use of the above `read_register()` method.
 
 
 ✅ Optional: Implement further methods that add features to the driver. Check the [documentation](https://invensense.tdk.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf) for the respective registers and their addresses. 💡 Some ideas:
