--- a/book/src/04_3_3_i2c.md
+++ b/book/src/04_3_3_i2c.md
@@ -32,7 +32,7 @@ We're not going to write an entire driver, merely the first step: the `hello wor
 
 ### `read_register()` and `write_register()`
 
-✅ Check out the write and `write_read` function in the `embedded-hal`. Why is it `write_read` and not just `read`?
+✅ Check out the `write` and `write_read` function in the `embedded-hal`. Why is it `write_read` and not just `read`?
 
 <Details>
     <Summary>Answer</Summary>
