docs: Apply vale lints

--- a/book/src/03_5_1_mqtt.md
+++ b/book/src/03_5_1_mqtt.md
@@ -1,4 +1,4 @@
-# How does MQTT work
+# How Does MQTT Work
 
 ⚠️ This exercise requires an MQTT server. If you're participating in a Ferrous Systems training, login credentials for a server operated by Espressif will be made available in the workshop, otherwise you can use one listed at <https://test.mosquitto.org/> or install one locally.
 
@@ -9,11 +9,11 @@ Our goal here is having our board to send out real-time updates of sensor values
 
 This can be modeled using a [publish-subscribe architecture](https://en.wikipedia.org/wiki/Publish%E2%80%93subscribe_pattern), where multiple clients publish messages in certain channels/topics, and can also subscribe to these topics to receive messages sent by others. Dispatching of these messages is coordinated by a message broker - in our case, this is done in an MQTT server.
 
-## MQTT messages
+## MQTT Messages
 
 An MQTT message consists of two parts - topic and payload.
 
-The topic serves the same purpose as an email subject or a label on a filing cabinet, whereas the payload contains the actual data. The payload data format is not specified, although JSON is common.
+The topic serves the same purpose as an email subject or a label on a filing cabinet, whereas the payload contains the actual data. The payload data format isn't specified, although JSON is common.
 
 🔎 The most recent version of the MQTT standard (MQTT 5) supports content type metadata.
 
@@ -22,9 +22,9 @@ When sending a MQTT message, a [Quality of Service (QoS)](https://en.wikipedia.o
 - At least once.
 - Exactly once.
 
-For the purpose of this exercise, it does not matter which quality you choose.
+For the purpose of this exercise, it doesn't matter which quality you choose.
 
-## MQTT topics
+## MQTT Topics
 
 MQTT topics are UTF-8 strings representing a hierarchy, with individual levels separated by a `/` slash character. A leading slash is supported, but not recommended. Some example topics are:
 
@@ -37,7 +37,7 @@ home/front door/lock
 
 Here a sensor would periodically publish the garage temperature which then gets broadcast to every subscriber, just as the bicycle beacon publishes its GPS coordinates. The `alarm` and `lock` topics serve as a command sink for specific devices. However, nothing prevents additional subscribers from listening in on these commands, which might provide useful for auditing purposes.
 
-🔎 Topics starting with `$` are reserved for statistics internal to the broker. Typically, the topic will begin with `$SYS`. Clients cannot publish to these topics.
+🔎 Topics starting with `$` are reserved for statistics internal to the broker. Typically, the topic will begin with `$SYS`. Clients can't publish to these topics.
 
 ⚠️ Since all workshop participants will be sharing the same MQTT server, some measures are required to prevent crosstalk between different projects. The exercise skeleton will generate a unique, random ID (in the `UUID v4` format) for each repository checkout. You can also [manually generate your own online](https://www.uuidgenerator.net/version4). Your UUID should be used as leading part of the message topics sent between computer and board, roughly resembling this pattern:
 
@@ -46,7 +46,7 @@ Here a sensor would periodically publish the garage temperature which then gets 
 6188eec9-6d3a-4eac-996f-ac4ab13f312d/command/board_led
 ```
 
-## Subscribing to topics
+## Subscribing to Topics
 
 A client sends several subscribe messages to indicate they're interested in receiving certain topics. Wildcards are optionally supported, both for a single hierarchy level and as a catch-all:
 
