--- a/book/src/03_5_3_mqtt.md
+++ b/book/src/03_5_3_mqtt.md
@@ -14,7 +14,7 @@
 cargo run --example solution_publ_rcv
 ```
 
-### Encoding and decoding message payloads
+### Encoding and Decoding Message Payloads
 
 The board LED commands are made of three bytes indicating red, green, and blue.
 - `enum ColorData` contains a topic `color_topic(uuid)` and the `BoardLed`
@@ -36,7 +36,7 @@ let subscribe_topic = /* ... */;
 client.subscribe(subscribe_topic, QoS::AtLeastOnce)
 ```
 
-## Handling incoming messages
+## Handling Incoming Messages
 
 
 The `message_event` parameter in the handler closure is of type `Result<Event<EspMqttMessage>`.
@@ -78,9 +78,10 @@ match message.details() {
 
 💡 Use a logger to see what you are receiving, for example: `info!("{}", color);` or `dbg!(color)`.
 
-## Extra tasks
+## Extra Tasks
 
-### Implement MQTT with hierarchical topics
+### Implement MQTT with Hierarchical Topics
+
 ✅ Work on this if you have finished everything else. We don't provide a full solution for this, as this is to test how far you get on your own.
 
 Check `common/lib/mqtt-messages`:
@@ -138,7 +139,7 @@ match message.details() {
 💡 Since you will be iterating over a MQTT topic, you will need to `split()` on a string returns an iterator. You can access a specific item from an iterator using [`nth()`](https://doc.rust-lang.org/std/iter/trait.Iterator.html#method.nth).
 💡 The solution implementing hierarchy can be run with `cargo run --example solution2`, while the solution without can be run with `cargo run` or `cargo run --example solution1`
 
-### Other tasks
+### Other Tasks
 
 ✅ Leverage [`serde_json`](https://docs.serde.rs/serde_json/) to encode/decode your message data as JSON.
 
@@ -149,7 +150,7 @@ InitialChunk(chunk_info) => { /* first chunk */},
 SubsequentChunk(chunk_data) => { /* all subsequent chunks */ }
 ```
 
-💡 You do not need to differentiate incoming chunks based on message ID, since at most one message will be in flight at any given time.
+💡 You don't need to differentiate incoming chunks based on message ID, since at most one message will be in flight at any given time.
 
 ## Troubleshooting
 <!-- DELETE this section? its the same as 3.5.2 -->
