--- a/book/src/04_3_0_i2c.md
+++ b/book/src/04_3_0_i2c.md
@@ -8,7 +8,7 @@ One of the signal lines is for data (SDA) and the other is for the clock signal 
 
 An I²C _transaction_ consists of one or more _messages_. Each _message_ is  consists of a _start symbol_, some _words_, and finally a _stop symbol_ (or another _start symbol_ if there is a follow-on message). Each word is eight bits, followed by an ACK (0) or NACK (1) bit which is sent by the recipient to indicate whether the word was received and understood correctly. The first word indicates both the 7-bit address of the device the message is intended for, plus a bit to indicate if the device is being _read from_ or being _written to_. If there is no device of that address on the bus, the first word will naturally have a NACK after it, because there is no device driving the SDA line low to generate an ACK bit, and so you know there is no device present.
 
-The clock frequency of the SCL line is usually 400 kHz but slower and faster speed are supported (standard speeds are 100kHz-400kHz-1MHz).In our exercise, the configuration will be 400 kHz (` <MasterConfig as Default>::default().baudrate(400.kHz().into())`).
+The clock frequency of the SCL line is usually 400 kHz but slower and faster speed are supported (standard speeds are 100 kHz-400 kHz-1 MHz).In our exercise, the configuration will be 400 kHz (` <MasterConfig as Default>::default().baudrate(400.kHz().into())`).
 
 
 
@@ -33,8 +33,8 @@ To read three bytes from an EEPROM device, the sequence will be something like:
 | 15.  |                          | Data Byte from EEPROM Address + 2 |
 | 16.  | NAK (i.e. end-of-read)   |                                   |
 | 17.  | STOP                     |                                   |
-### I²C signal image
 
+### I²C Signal Image
 
 <p style="text-align:center;"><img src="./assets/I2C_data_transfer.svg" width="100%"></p>
 
