--- a/book/src/04_3_1_i2c.md
+++ b/book/src/04_3_1_i2c.md
@@ -41,7 +41,7 @@ cargo doc --open
 | SDA    | GPIO10 |
 | SCL    | GPIO8  |
 
-✅ Create an instance of the I²C peripheral with the help of the documentation you generated. Use 400kHz as frequency.
+✅ Create an instance of the I²C peripheral with the help of the documentation you generated. Use 400 kHz as frequency.
 
 ✅ Use the `shtcx` driver crate, make an instance of the SHTC3 sensor, passing the I²C instance into them. Check the documentation for guidance.
 
@@ -66,7 +66,7 @@ HUM: [local humidity] %
 
 💡 There are methods that turn the sensor values into the desired unit.
 
-### Part 2: Reading Accelerometer data.
+### Part 2: Reading Accelerometer Data
 
 Using a bus manager, implement the second sensor. Read out its values and print the values from both sensors.
 
