--- a/book/src/04_3_2_i2c.md
+++ b/book/src/04_3_2_i2c.md
@@ -38,7 +38,7 @@ where
     }
 // ...
 ```
-### Device address
+### Device Address
 
 - The device's addresses are available in the code:
 
@@ -102,7 +102,7 @@ where
 * Starting measurements
 * Reading measurements
 
-### 🔎 General info about peripheral registers
+### 🔎 General Info About Peripheral Registers
 
 Registers can have different meanings; in essence, they are **a location that can store a value**.
 
