--- a/book/src/04_3_3_i2c.md
+++ b/book/src/04_3_3_i2c.md
@@ -1,6 +1,6 @@
 # Writing an I²C Driver - Hard Version
 
-We're not going to write an entire driver, merely the first step: the `hello world` of driver writing: reading the device ID of the sensor. This version is labelled hard, because you have to come up with the content of the methods and research information in the [`embedded-hal`](https://docs.rs/embedded-hal/latest/embedded_hal/) and datasheets yourself.  You can work in the same file with either version.
+We're not going to write an entire driver, merely the first step: the `hello world` of driver writing: reading the device ID of the sensor. This version is labelled hard, because you have to come up with the content of the methods and research information in the [`embedded-hal`](https://docs.rs/embedded-hal/latest/embedded_hal/) and datasheets yourself. You can work in the same file with either version.
 
 `i2c-driver/src/icm42670p.rs` is a gap text of a very basic I²C IMU sensor driver. The task is to complete the file, so that running `main.rs` will log the device ID of the driver.
 
@@ -15,7 +15,7 @@ We're not going to write an entire driver, merely the first step: the `hello wor
  ✅ Implement an instantiating method in the `impl` block. This method needs to be accessible from outside, so it's labelled `pub`. The method takes ownership of the I²C bus and creates an instance of the struct you defined earlier.
 
 
-#### Device address
+#### Device Address
 
  ✅ This I²C device has two possible addresses, find them in the [datasheet, section 9.3](https://invensense.tdk.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf).
 
@@ -36,7 +36,7 @@ We're not going to write an entire driver, merely the first step: the `hello wor
 
 <Details>
     <Summary>Answer</Summary>
-The reason for this lies in the characteristics of the I²C protocol: We first need to write a command over the I²C bus to specify which register we want to read from.
+The reason for this lies in the characteristics of the I²C protocol. We first need to write a command over the I²C bus to specify which register we want to read from.
 </Details>
 
 ✅ Define a `read_register` and a `write_register` method for the sensor instance. Use methods provided by the `embedded-hal` crate. They serve as helpers for more specific methods and as an abstraction that is adapted to a sensor with 8-bit registers. This means that the data that is written, as well as the data that is read is an unsigned 8-bit integer. Helper methods can remain private as they don't need to be accessible from outside this crate.
@@ -48,7 +48,7 @@ The reason for this lies in the characteristics of the I²C protocol: We first n
  * Starting measurements
  * Reading measurements
 
-### 🔎 General info about peripheral registers
+### 🔎 General Info About Peripheral Registers
 
 - Registers are small amounts of storage, immediately accessible by the processor. The registers on the sensor are 8 bits.
 - They can be accessed by their address
