--- a/book/src/03_5_2_mqtt.md
+++ b/book/src/03_5_2_mqtt.md
@@ -11,7 +11,7 @@
 The client also generates random RGB colors and publishes them in a topic.
 **This is only relevant for the second part of this exercise**.
 
-⚠️ Similar to the http exercises, you need to configure your connection credentials in `cfg.toml` for **both programs**. Besides WiFi credentials, you'll also need to add MQTT server details. Check each `cfg.toml.example` for required settings. Remember, the name between brackets in the `cfg.toml` file is the name of the package in `Cargo.toml`.
+⚠️ Similar to the http exercises, you need to configure your connection credentials in `cfg.toml` for **both programs**. Besides Wi-Fi credentials, you'll also need to add MQTT server details. Check each `cfg.toml.example` for required settings. Remember, the name between brackets in the `cfg.toml` file is the name of the package in `Cargo.toml`.
 
 The structure of the exercises is as below. In this part, we will focus on the Temperature topic.
 
@@ -45,7 +45,7 @@ Setting new color: rgb(45,88,22)
 Board temperature: 33.32°C
 ```
 
-## Establishing a connection
+## Establishing a Connection
 
 Connections are managed by an instance of `esp_idf_svc::mqtt::client::EspMqttClient`.
 It is constructed using
@@ -64,20 +64,20 @@ let mut client = EspMqttClient::new(broker_url,
 
 ```
 
-## Support tools & crates
+## Support Tools & Crates
 
 To log the sensor values sent by the board, a helper client is provided under `intro/mqtt/host_client`. It subscribes to the temperature topic.
 
 The `mqtt_messages` crate (located in `common/lib`) supports handling messages, subscriptions, and topics:
 
-### Functions to generate topic strings
+### Functions to Generate Topic Strings
 -  `color_topic(uuid)` - creates a topic to send colors that will be published to the board.
 <!-- - `cmd_topic_fragment(uuid)` - creates the leading part of a "command" topic (the `a-uuid/command/` part in `a-uuid/command/board_led`) -->
 - `hello_topic(uuid)` - test topic for initially verifying a successful connection
 - `temperature_data_topic(uuid)` - creates a whole "temperature" topic string
 
 
-### Encoding and decoding message payloads
+### Encoding and Decoding Message Payloads
 
 The board temperature `f32` float is converted to four "big endian" bytes using `temp.to_be_bytes()`.
 
