docs: Grammarly fixes

--- a/book/src/03_5_1_mqtt.md
+++ b/book/src/03_5_1_mqtt.md
@@ -5,7 +5,7 @@
 <!-- Test with HiveMQ or any other free server? -->
 
 To conclude the introductory course, let's add some [IoT](https://en.wikipedia.org/wiki/Internet_of_things) functionality to the board.
-Our goal here is having our board to send out real-time updates of sensor values without having to poll repeatedly, like we would with an HTTP server, and also receive commands to change the board LED color.
+Our goal here is to have our board send out real-time updates of sensor values without having to poll repeatedly, like we would with an HTTP server, and also receive commands to change the board LED color.
 
 This can be modeled using a [publish-subscribe architecture](https://en.wikipedia.org/wiki/Publish%E2%80%93subscribe_pattern), where multiple clients publish messages in certain channels/topics, and can also subscribe to these topics to receive messages sent by others. Dispatching of these messages is coordinated by a message broker - in our case, this is done in an MQTT server.
 
@@ -16,8 +16,7 @@ An MQTT message consists of two parts - topic and payload.
 The topic serves the same purpose as an email subject or a label on a filing cabinet, whereas the payload contains the actual data. The payload data format isn't specified, although JSON is common.
 
 🔎 The most recent version of the MQTT standard (MQTT 5) supports content type metadata.
-
-When sending a MQTT message, a [Quality of Service (QoS)](https://en.wikipedia.org/wiki/MQTT#Quality_of_service) parameter needs to be defined, indicating delivery guarantees:
+When sending an MQTT message, a [Quality of Service (QoS)](https://en.wikipedia.org/wiki/MQTT#Quality_of_service) parameter needs to be defined, indicating delivery guarantees:
 - At most once.
 - At least once.
 - Exactly once.
@@ -37,9 +36,9 @@ home/front door/lock
 
 Here a sensor would periodically publish the garage temperature which then gets broadcast to every subscriber, just as the bicycle beacon publishes its GPS coordinates. The `alarm` and `lock` topics serve as a command sink for specific devices. However, nothing prevents additional subscribers from listening in on these commands, which might provide useful for auditing purposes.
 
-🔎 Topics starting with `$` are reserved for statistics internal to the broker. Typically, the topic will begin with `$SYS`. Clients can't publish to these topics.
+🔎 Topics starting with `$` are reserved for statistics internal to the broker. Typically, the topic will begin with `$SYS`. Clients can't publish on these topics.
 
-⚠️ Since all workshop participants will be sharing the same MQTT server, some measures are required to prevent crosstalk between different projects. The exercise skeleton will generate a unique, random ID (in the `UUID v4` format) for each repository checkout. You can also [manually generate your own online](https://www.uuidgenerator.net/version4). Your UUID should be used as leading part of the message topics sent between computer and board, roughly resembling this pattern:
+⚠️ Since all workshop participants will be sharing the same MQTT server, some measures are required to prevent crosstalk between different projects. The exercise skeleton will generate a unique, random ID (in the `UUID v4` format) for each repository checkout. You can also [manually generate your own online](https://www.uuidgenerator.net/version4). Your UUID should be used as leading part of the message topics sent between the computer and board, roughly resembling this pattern:
 
 ```code
 6188eec9-6d3a-4eac-996f-ac4ab13f312d/sensor_data/temperature
@@ -52,7 +51,7 @@ A client sends several subscribe messages to indicate they're interested in rece
 
 - `home/garage/temperature` - subscribes only to this specific topic
 - `home/#` - the hash character is used as multi-level wildcard and thus subscribes to every topic starting with `home/` - `home/garage/temperature`, `home/front door/lock` and `home/alarm/enable` would all match, but `beacons/bicycle/position` won't. The multi-level wildcard must be placed at the end of a subscription string.
-- `home/+/temperature` - the plus character serves as single-level wildcard to subscribe to `home/garage/temperature`, `home/cellar/temperature`, etc.
+- `home/+/temperature` - the plus character serves as a single-level wildcard to subscribe to `home/garage/temperature`, `home/cellar/temperature`, etc.
 
 
 
