--- a/book/src/03_5_3_mqtt.md
+++ b/book/src/03_5_3_mqtt.md
@@ -29,7 +29,7 @@ if let Ok(ColorData::BoardLed(color)) = ColorData::try_from(message_data) { /* s
 
 ## Publish & Subscribe
 
-`EspMqttClient` is not only responsible for publishing, but also for subscribing to topics.
+`EspMqttClient` isn't only responsible for publishing but also for subscribing to topics.
 
 ```rust
 let subscribe_topic = /* ... */;
@@ -76,7 +76,7 @@ match message.details() {
 }
 ```
 
-💡 Use a logger to see what you are receiving, for example: `info!("{}", color);` or `dbg!(color)`.
+💡 Use a logger to see what you are receiving, for example, `info!("{}", color);` or `dbg!(color)`.
 
 ## Extra Tasks
 
@@ -86,7 +86,7 @@ match message.details() {
 
 Check `common/lib/mqtt-messages`:
 
-✅ Implement the same procedure, but by using MQTT hierarchy. Subscribe subscribing to all "command" messages, combining `cmd_topic_fragment(uuid)` with a trailing `#` wildcard.
+✅ Implement the same procedure, but by using an MQTT hierarchy. Subscribe by subscribing to all "command" messages, combining `cmd_topic_fragment(uuid)` with a trailing `#` wildcard.
 
 ✅ Use `enum Command` instead of `enum ColorData`. `enum Command` represents all possible commands (here: just `BoardLed`).
 
@@ -103,7 +103,7 @@ let raw = RawCommandData {
 
 Check the `host-client`:
 
-✅ you will need to replace `color` with `command`. For example, like this:
+✅ you will need to replace `color` with `command`. For example, with this:
 
 ```rust
 let command = Command::BoardLed(color)
