--- a/book/src/04_3_1_i2c.md
+++ b/book/src/04_3_1_i2c.md
@@ -52,7 +52,7 @@ cargo doc --open
 Device ID SHTC3: 71
 ```
 
-✅ Make a measurement, and read the sensor values and print them. Check the documentation for guidance on sensor methods.
+✅ Make a measurement, read the sensor values and print them. Check the documentation for guidance on sensor methods.
 
 #### Expected Output:
 
@@ -73,7 +73,7 @@ Using a bus manager, implement the second sensor. Read out its values and print 
 
 Continue with your own solution from part one. Alternatively you can start with the provided partial solution of Part 1: `i2c-sensor-reading/examples/part_1.rs`.
 
-`i2c-sensor-reading/examples/part_2.rs` contains a working solution of Part 2. You can consult it if you need help, to run it:
+`i2c-sensor-reading/examples/part_2.rs` contains a working solution of Part 2. You can consult it if you need help, by running:
 
 ```console
 cargo run --example part_2
@@ -95,7 +95,7 @@ use icm42670::{Address, Icm42670, PowerMode as imuPowerMode};
 <details>
   <summary>Answer</summary>
 
-This is an ownership issue. Every place in memory needs to be owned by something. If we pass the I²C bus to the SHTC3, the sensor owns the I²C bus. It can't be owned by another sensor. Borrowing is also not possible, because the I²C bus needs to be mutable. Both sensors need to be able to change it. We solve this problem by introducing a bus manager, that creates a number of proxies of the I²C bus. These proxies can than be owned by the respective sensors.
+This is an ownership issue. Every place in memory needs to be owned by something. If we pass the I²C bus to the SHTC3, the sensor owns the I²C bus. It can't be owned by another sensor. Borrowing is also not possible, because the I²C bus needs to be mutable. Both sensors need to be able to change it. We solve this problem by introducing a bus manager, that creates a number of proxies of the I²C bus. These proxies can then be owned by the respective sensors.
 </details>
 
 ✅ Import the bus manager crate.
