--- a/book/src/04_3_2_i2c.md
+++ b/book/src/04_3_2_i2c.md
@@ -104,7 +104,7 @@ where
 
 ### 🔎 General Info About Peripheral Registers
 
-Registers can have different meanings; in essence, they are **a location that can store a value**.
+Registers can have different meanings, in essence, they are **a location that can store a value**.
 
 In this specific context, we are using an external device (since it is a sensor, even if it is on the same PCB). It is addressable by I2C, and we are reading and writing to its register addresses. The addresses each identify a unique location that contains some information. In this case, we want the address for the location that contains the current temperature, as read by the sensor.
 
