--- a/book/src/03_5_0_mqtt.md
+++ b/book/src/03_5_0_mqtt.md
@@ -1,3 +1,3 @@
 # IoT Using MQTT
 
-In this exercise, we will learn how MQTT works and write an application that is able to send and receive data to the Internet using MQTT.
+In this exercise, we will learn how MQTT works and write an application that can send and receive data to the Internet using MQTT.
