docs: Add simulation documentation

--- a/book/src/04_3_1_i2c.md
+++ b/book/src/04_3_1_i2c.md
@@ -125,3 +125,17 @@ GYRO: X: 0.00 Y: 0.00 Z: 0:00
 TEMP: [local temperature] °C
 HUM: [local humidity] %
 ```
+
+## Simulation
+
+This project is available for simulation through two methods:
+- Wokwi projects
+  - [Exercise](https://wokwi.com/projects/360623713943950337?build-cache=disable)
+  - [Solution Part 2](https://wokwi.com/projects/360344742047853569?build-cache=disable)
+- Wokwi files are also present in the project folder to simulate it with Wokwi VS Code extension:
+   1. Press F1, select `Wokwi: Select Config File` and choose `advanced/i2c-sensor-reading/wokwi.toml`
+      - Edit the `wokwi.toml` file to select between exercise and solutions simulation
+   2. Build you project
+   3. Press F1 again and select `Wokwi: Start Simulator`
+
+When simulating this project, expect the following hardcoded values: `TEMP: 24.61 °C | HUM: 36.65 % | GYRO: X= 0.00  Y= 0.00  Z= 0.00`
