--- a/book/src/04_3_2_i2c.md
+++ b/book/src/04_3_2_i2c.md
@@ -110,3 +110,15 @@ In this specific context, we are using an external device (since it is a sensor,
 
 You can find the register map of the ICM-42670 in [section 14](https://invensense.tdk.com/wp-content/uploads/2021/07/DS-000451-ICM-42670-P-v1.0.pdf) should you want to try to get other interesting data from this sensor.
 
+
+
+## Simulation
+
+This project is available for simulation through two methods:
+- Wokwi projects
+  - [Exercise](https://wokwi.com/projects/360728357589094401?build-cache=disable)
+  - [Solution](https://wokwi.com/projects/333375074521317970?build-cache=disable)
+- Wokwi files are also present in the project folder to simulate it with Wokwi VS Code extension:
+   1. Press F1, select `Wokwi: Select Config File` and choose `advanced/i2c-driver/wokwi.toml`
+   2. Build you project
+   3. Press F1 again and select `Wokwi: Start Simulator`
